core/uvc-infra/k8s/prod/uvc-chat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: uvc-chat
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: uvc-chat
  template:
    metadata:
      labels:
        app: uvc-chat
    spec:
      imagePullSecrets:
        - name: REGISTRY_SECRET_PLACEHOLDER
      containers:
        - name: uvc-chat
          image: REGISTRY_URL_PLACEHOLDER/uvc-chat:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3005
          livenessProbe:
            httpGet:
              path: /health
              port: 3005
            initialDelaySeconds: 180
            periodSeconds: 20
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 3005
            initialDelaySeconds: 5
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: uvc-chat-srv
spec:
  selector:
    app: uvc-chat
  ports:
    - name: uvc-chat
      protocol: TCP
      port: 3005
      targetPort: 3005
