core/uvc-infra/k8s/prod/uvc-event-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: uvc-event
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: uvc-event
  template:
    metadata:
      labels:
        app: uvc-event
    spec:
      imagePullSecrets:
        - name: REGISTRY_SECRET_PLACEHOLDER
      containers:
        - name: uvc-event
          image: REGISTRY_URL_PLACEHOLDER/uvc-event:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          ports:
            - containerPort: 3008
          livenessProbe:
            httpGet:
              path: /health
              port: 3008
            initialDelaySeconds: 180
            periodSeconds: 20
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 3008
            initialDelaySeconds: 90
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: uvc-event-srv
spec:
  selector:
    app: uvc-event
  ports:
    - name: uvc-event
      protocol: TCP
      port: 3008
      targetPort: 3008
