core/uvc-infra/k8s/prod/uvc-ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uvc-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://univocal.de, https://apps.univocal.de"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upgrade-insecure-requests: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"  # Hier hinzugefügt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - apps.univocal.de
        - univocal.de
      secretName: uvc-de-tls
  rules:
    - host: univocal.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uvc-landing-srv
                port:
                  number: 3010
    - host: apps.univocal.de
      http:
        paths:
          - path: /Shibboleth.sso
            pathType: Prefix
            backend:
              service:
                name: uvc-shibboleth-srv
                port:
                  number: 80
          - path: /api/auth/public/dfn/login
            pathType: Prefix
            backend:
              service:
                name: uvc-shibboleth-srv
                port:
                  number: 80
          - path: /api/auth/public/dfn/bridge
            pathType: Prefix
            backend:
              service:
                name: uvc-shibboleth-srv
                port:
                  number: 80
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: uvc-auth-srv
                port:
                  number: 3001
          - path: /api/tenant
            pathType: Prefix
            backend:
              service:
                name: uvc-tenant-srv
                port:
                  number: 3002
          - path: /api/profile
            pathType: Prefix
            backend:
              service:
                name: uvc-profile-srv
                port:
                  number: 3003
          - path: /api/calendar
            pathType: Prefix
            backend:
              service:
                name: uvc-calendar-srv
                port:
                  number: 3004
          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: uvc-chat-srv
                port:
                  number: 3005
          - path: /api/knowledge
            pathType: Prefix
            backend:
              service:
                name: uvc-knowledge-srv
                port:
                  number: 3006
          - path: /api/survey
            pathType: Prefix
            backend:
              service:
                name: uvc-survey-srv
                port:
                  number: 3007
          - path: /api/event
            pathType: Prefix
            backend:
              service:
                name: uvc-event-srv
                port:
                  number: 3008
          - path: /api/project
            pathType: Prefix
            backend:
              service:
                name: uvc-project-srv
                port:
                  number: 3009
          - path: /api/statistics
            pathType: Prefix
            backend:
              service:
                name: uvc-statistics-srv
                port:
                  number: 3011
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uvc-web-srv
                port:
                  number: 3000
